<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".VoiceControl">

    <include android:id="@+id/appbar" layout="@layout/appbar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/status1"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_status1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text1"
                android:text="@string/outlet_1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/voice_text1"
                android:layout_below="@id/appbar"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/status2"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_status2"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text2"
                android:text="@string/outlet_2"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/voice_text2"
                android:layout_below="@id/appbar"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        android:src="@drawable/sound_wave"
        android:layout_below="@id/linear"
        android:layout_above="@id/relative"
        android:layout_marginTop="20dp"/>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/relative"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/outlet1"
                    android:text="@string/outlet_1"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"/>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle">

                    <ImageButton
                        android:id="@+id/btnSpeak1"
                        android:layout_width="26dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:src="@drawable/ic_mic_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/speak_text1"
                        android:text="@string/tap"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_below="@id/btnSpeak1"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/outlet2"
                    android:text="@string/outlet_2"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"/>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle">

                    <ImageButton
                        android:id="@+id/btnSpeak2"
                        android:layout_width="26dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:src="@drawable/ic_mic_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/speak_text2"
                        android:text="@string/tap"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_below="@id/btnSpeak2"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>